Entity select no longer overflows

--- a/src/app/core/entity-components/entity-utils/entity-select/entity-select.component.scss
+++ b/src/app/core/entity-components/entity-utils/entity-select/entity-select.component.scss
@@ -1,5 +1,6 @@
 .main-list {
-  width: 100%;
+  // Mat chip list overflows a little bit without this hack
+  width: 98%;
 }
 
 .chip {
